Fix all unnecessary showing of scrollbars (#1326)
General note, pretty much always you should be using auto instead of
scroll

--- a/client/src/app/main-menu/main-menu.module.scss
+++ b/client/src/app/main-menu/main-menu.module.scss
@@ -415,5 +415,5 @@ nav {
 	border-radius: 0.5vh;
 	padding: 1vh 2vh;
 	gap: 1vh;
-	overflow-y: scroll;
+	overflow-y: auto;
 }
