--- a/client/src/app/main-menu/statistics.module.scss
+++ b/client/src/app/main-menu/statistics.module.scss
@@ -159,7 +159,7 @@
 	overflow: hidden;
 
 	&.hof {
-		overflow-y: scroll;
+		overflow-y: auto;
 	}
 }
 
@@ -264,7 +264,7 @@
 .gameHistoryGames {
 	height: 100%;
 	width: 100%;
-	overflow-y: scroll;
+	overflow-y: auto;
 	display: flex;
 	flex-direction: column;
 	gap: 1rem;
@@ -554,7 +554,7 @@
 	display: flex;
 	flex-direction: column;
 	height: 80vh;
-	overflow-y: scroll;
+	overflow-y: auto;
 	padding: 0.5rem;
 	background-color: var(--gray-900);
 }
